--- a/day4.ipynb
+++ b/day4.ipynb
@@ -99,6 +99,182 @@
     "    print(f'Guest {name} has checked out from room {room_no}')\n",
     "    print(rooms)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: GCH1006, Name: John Lennon, Grade: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = { 'GCH1001': ['John Lennon', 75], 'GCH1002': ['Paul McCartney', 80], \\\n",
+    "             'GCH1003': ['George Harrison', 65], 'GCH1004': ['Ringo Starr', 30], \\\n",
+    "             'GCH1005': ['Pete Best', 45], 'GCH1006': ['John Lennon', 40] }\n",
+    "id = input('Please enter student ID: ')\n",
+    "if id in students:\n",
+    "    print(f'ID: {id}, Name: {students[id][0]}, Grade: {students[id][1]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enroll student by enter ID, name (grade = 0)\n",
+    "id = input('Please enter student ID: ')\n",
+    "if id in students:\n",
+    "    print(f'ID {id} is already in the system')\n",
+    "else:\n",
+    "    name = input('Please enter student name: ')\n",
+    "    students[id] = [name, 0]\n",
+    "    print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paul McCartney', 85]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Update student grade by enter ID, grade\n",
+    "id = input('Please enter student ID: ')\n",
+    "if id not in students:\n",
+    "    print(f'ID {id} is not in the system')\n",
+    "else:\n",
+    "    grade = int(input('Please enter student grade: '))\n",
+    "    students[id][1] = grade\n",
+    "    print(students[id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Paul McCartney has been dropped out\n",
+      "{'GCH1001': ['John Lennon', 75], 'GCH1003': ['George Harrison', 65], 'GCH1004': ['Ringo Starr', 30], 'GCH1005': ['Pete Best', 45], 'GCH1006': ['John Lennon', 40]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop out student by enter ID\n",
+    "id = input('Please enter student ID: ')\n",
+    "if id not in students:\n",
+    "    print(f'ID {id} is not in the system')\n",
+    "else:\n",
+    "    student_grade = students.pop(id)\n",
+    "    print(f'Student {student_grade[0]} has been dropped out')\n",
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = {'John': 6.5, 'Paul': 7.0, 'George': 8.0, 'Ringo': 5.5, 'Pete': 6.0,\n",
+    "            'Mike': 3.0, 'Anne': 8.5, 'Mary': 8.5, 'Peter': 3.5, 'Joanna': 6.5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anne has the highest grade: 8.5\n",
+      "Mary has the highest grade: 8.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# C1: use traditional for loop\n",
+    "max_grade = 0\n",
+    "for st, grade in students.items():\n",
+    "    if grade > max_grade:\n",
+    "        max_grade = grade\n",
+    "for st, grade in students.items():\n",
+    "    if grade == max_grade:\n",
+    "        print(f'{st} has the highest grade: {grade}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anne', 'Mary']\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_grade = max([grade for st, grade in students.items()])\n",
+    "best_students = [st for st, grade in students.items() if grade == max_grade]\n",
+    "print(best_students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best student is: Anne\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Best student is:', max(students, key=students.get))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean grade: 6.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_grade = sum([grade for st, grade in students.items()]) / len(students)\n",
+    "print('Mean grade:', mean_grade)"
+   ]
   }
  ],
  "metadata": {
