--- a/day6.ipynb
+++ b/day6.ipynb
@@ -396,10 +396,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# search for x in items, return True if found, False otherwise. If abs = True, search for |x|\n",
+    "def search(items, x, abs=False):\n",
+    "    if abs == False:\n",
+    "        for i in items:\n",
+    "            if x == i:\n",
+    "                return True\n",
+    "        return False\n",
+    "    else:\n",
+    "        for i in items:\n",
+    "            if x == i or x == -i:\n",
+    "                return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(search([1, 2, -3, 4, 5], -3))\n",
+    "print(search([1, 2, -3, 4, 5], 3))\n",
+    "print(search([1, 2, -3, 4, 5], -3, abs=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def search(items, x, abs=False):\n",
+    "    if abs == False:\n",
+    "        return x in items\n",
+    "    else:\n",
+    "        return x in items or -x in items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_max(items, key=None):\n",
+    "    if key is None:\n",
+    "        m = items[0]\n",
+    "        for i in items:\n",
+    "            if i > m:\n",
+    "                m = i\n",
+    "        return m\n",
+    "    else:\n",
+    "        m = items[0]\n",
+    "        for i in items:\n",
+    "            if key(i) > key(m):\n",
+    "                m = i\n",
+    "        return m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter Dinglas\n",
+      "Mary Antoanette\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['John Lennon', 'Mary Antoanette', 'Peter Dinglas', 'Alice Cooper']\n",
+    "m = my_max(names)\n",
+    "print(m)\n",
+    "m = my_max(names, key=len)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Lennon\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find name that has max last name\n",
+    "def last_name(name):\n",
+    "    return name.split()[-1]\n",
+    "\n",
+    "m = my_max(names, key=last_name)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary Antoanette\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find name that has max number of vowels\n",
+    "def vowel_count(name):\n",
+    "    vowels = 'aeiou'\n",
+    "    count = 0\n",
+    "    for c in name.lower():\n",
+    "        if c in vowels:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "m = my_max(names, key=vowel_count)\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[97, 94, 93, 75, 56, 46, 34, 22, 21, 13]\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)\n",
+    "print(my_max(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[86, 64, 57, 52, 31, 85, 93, 67, 55, 77]\n",
+      "57\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find number that has max last digit\n",
+    "numbers = [np.random.randint(10, 100) for i in range(10)]\n",
+    "print(numbers)\n",
+    "def digit(n):\n",
+    "    return n % 10\n",
+    "\n",
+    "print(my_max(numbers, key=digit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n",
+      "[76, 23, -66, 90, -97, -22, -79, -99, 80, 88]\n",
+      "-99\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find number that has max sum of digits\n",
+    "def sum_digits(n):\n",
+    "    return n // 10 + n % 10\n",
+    "\n",
+    "print(my_max(numbers, key=sum_digits))\n",
+    "# Find number that has max absolute value\n",
+    "numbers = [np.random.randint(-100, 100) for i in range(10)]\n",
+    "print(numbers)\n",
+    "print(my_max(numbers, key=abs))"
+   ]
   }
  ],
  "metadata": {
