--- a/day9.ipynb
+++ b/day9.ipynb
@@ -346,6 +346,133 @@
     "    for row in reader:\n",
     "        print(f'{row[2]}: {row[3]}, {row[4]}, {type(row[4])}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Triboro Bridge and Tunnel Authority\n",
+      "The Metropolitan Transit Authority\n",
+      "The Port Authority of New York and New Jersey\n",
+      "authority agencies have been saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "fr = open('Datasets/agencies.txt', 'r')\n",
+    "content = fr.readlines()\n",
+    "\n",
+    "fw = open('Datasets/agency_authority.txt', 'w')\n",
+    "for line in content:\n",
+    "    if 'Authority' in line:\n",
+    "        print(line.strip())\n",
+    "        fw.write(line.strip() + '\\n')\n",
+    "print('authority agencies have been saved!')\n",
+    "fr.close()\n",
+    "fw.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lan\n",
+      "Hung\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "names, maths, liters, english = np.loadtxt('Datasets/grades.txt', skiprows=5, dtype=str, unpack=True)\n",
+    "merits = [['Name', 'Math', 'Literature', 'English']]\n",
+    "for i in range(len(names)):\n",
+    "    if (float(maths[i]) + float(liters[i]) + float(english[i]))/3 >= 8.0:\n",
+    "        print(names[i])\n",
+    "        merits.append([names[i], maths[i], liters[i], english[i]])\n",
+    "\n",
+    "np.savetxt('Datasets/merits.csv', merits, fmt='%s', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GBH17538: Le Minh Huong, 7.5\n",
+      "GCH16388: Pham Minh Thang, 8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "fw = open('Datasets/gradebook_pass.csv', 'w')\n",
+    "writer = csv.writer(fw)\n",
+    "writer.writerow(['Login', 'Email', 'Code', 'Name', 'Grade']) # write csv header\n",
+    "with open('Datasets/gradebook.csv', 'r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    next(reader) # skip header\n",
+    "    for row in reader:\n",
+    "        if float(row[4]) >= 6.5:\n",
+    "            print(f'{row[2]}: {row[3]}, {row[4]}')\n",
+    "            writer.writerow(row)    # write content\n",
+    "\n",
+    "fw.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean data has been saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read pizza_data.csv\n",
+    "fr = open('Datasets/pizza_data.csv', 'r')\n",
+    "reader = csv.reader(fr)\n",
+    "header = next(reader) # read header\n",
+    "# delelte header[0], header[8] # delete id column, url column\n",
+    "del header[0]\n",
+    "del header[7]\n",
+    "\n",
+    "fw = open('Datasets/pizza_clean.csv', 'w')\n",
+    "writer = csv.writer(fw)\n",
+    "writer.writerow(header) # write header\n",
+    "\n",
+    "clean_data =[]\n",
+    "for row in reader:\n",
+    "    if row[9] != '' and row[10] != '' and row[18] != '' and row[19] != '':\n",
+    "        # Get 1st category\n",
+    "        row[8] = row[8].split(',')[0].split('/')[0].split('&')[0].split(' and ')[0]\n",
+    "        del row[0]  # Remove id column, url column\n",
+    "        del row[7]\n",
+    "        clean_data.append(row)\n",
+    "        writer.writerow(row) \n",
+    "\n",
+    "print('Clean data has been saved!')\n",
+    "fr.close()\n",
+    "fw.close()"
+   ]
   }
  ],
  "metadata": {
